UpdateCategoryHandler added
